# next-python-grpc-test

./: .gitignore  buf.gen.yaml  buf.yaml  package.json
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/src/: helloworld_pb2_grpc.py  main.py
frontend/: package.json
frontend/src/app/: a.tsx  page.tsx
